# bviz

./: .gitignore  pyproject.toml
docs/: README.md
src/bviz/: main.py
